Add a comment to the HTML file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Hello, World!</h1>
     <p>This is a simple HTML page.</p>
     <p>New content added!</p>
+
+    <!-- This is a new comment added to the HTML file -->
   </body>
 
 </html>
