Add new content to the HTML file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <p>New content added!</p>
 
     <!-- This is a new comment added to the HTML file -->
+
+    <!-- Let's add a new paragraph -->
+    <p>This is some additional content added to the HTML file.</p>
+  </body>
   </body>
 
 </html>
